--- a/tove.ipynb
+++ b/tove.ipynb
@@ -521,6 +521,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cpd_from_data(cpd,data):\n",
+    "    child = list(cpd.columns)[-1]\n",
+    "    parents = list(cpd.columns[cpd.columns != child])\n",
+    "    jdist = cpd_probs_from_data(cpd,data)\n",
+    "    cpd['probs'] = jdist\n",
+    "    # restricting to evidence e = (child = 1)\n",
+    "    cpd_e = cpd[cpd[child] ==1].copy()\n",
+    "    prob_ev = cpd_e['probs'].sum()\n",
+    "    cpd_e['cond_prob'] = cpd_e['probs']/prob_ev\n",
+    "    return cpd_e\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 141,
    "metadata": {},
    "outputs": [
@@ -751,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -973,7 +991,7 @@
        "7    1    1    1  0.65625"
       ]
      },
-     "execution_count": 229,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,10 +1001,163 @@
     "nodes = list(nodes.drop(\"Factor\"))\n",
     "nodes\n",
     "\n",
-    "factor1 = factor1.drop(columns=var_to_elim)\n",
-    "factor1 = factor1.groupby(nodes, as_index=False)[\"Factor\"].sum()\n",
+    "#factor1 = factor1.drop(columns=var_to_elim)\n",
+    "factor1 = factor1.groupby(list(factor1.columns[factor1.columns != var_to_elim]), as_index=False)[\"Factor\"].sum()\n",
     "\n",
     "factor1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cpd_from_data(cpd,data):\n",
+    "    cpd = cpd.copy()\n",
+    "    child = list(cpd.columns)[-1]\n",
+    "    parents = list(cpd.columns[cpd.columns != child])\n",
+    "    jdist = cpd_probs_from_data(cpd,data)\n",
+    "    cpd['probs'] = jdist\n",
+    "    # restricting to evidence e = (child = 1)\n",
+    "    cpd_e = cpd[cpd[child] ==1].copy()\n",
+    "    prob_ev = cpd_e['probs'].sum()\n",
+    "    cpd_e['cond_prob'] = cpd_e['probs']/prob_ev\n",
+    "    return cpd_e\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Erk</th>\n",
+       "      <th>Mek</th>\n",
+       "      <th>Akt</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Erk  Mek  Akt\n",
+       "0    0    0    0\n",
+       "1    0    0    1\n",
+       "2    0    1    0\n",
+       "3    0    1    1\n",
+       "4    1    0    0\n",
+       "5    1    0    1\n",
+       "6    1    1    0\n",
+       "7    1    1    1"
+      ]
+     },
+     "execution_count": 249,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X1 = 'Akt'\n",
+    "X2 = 'Erk'\n",
+    "X3 = 'Mek'\n",
+    "\n",
+    "parents = [X2,X3]\n",
+    "\n",
+    "test4 = create_CPD(X1,parents)\n",
+    "test4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Erk  Mek  Akt     probs  cond_prob\n",
+      "1    0    0    1  0.039859   0.172589\n",
+      "3    0    1    1  0.009379   0.040609\n",
+      "5    1    0    1  0.111372   0.482234\n",
+      "7    1    1    1  0.070340   0.304569\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cpd_from_data(test4,data))"
    ]
   }
  ],
