--- a/ellen.ipynb
+++ b/ellen.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,6 +21,35 @@
     "\n",
     "a row of data corresponds to : $$\\mathbf{X}_{j}=\\left(X_{1, j}, \\ldots, X_{9, j}\\right)$$\n",
     "We assume that each observation is an independent draw from the Bayesian network."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6,  7, 10])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scope_mat = pd.read_csv('dataset/scope.csv')\n",
+    "scope_mat\n",
+    "\n",
+    "def factor_scope(Xi):\n",
+    "    # return the indexes with 1\n",
+    "    idx = np.where(scope_mat[Xi]==1)\n",
+    "    Xs = idx[0]+1\n",
+    "    return Xs\n",
+    "    \n",
+    "factor_scope(\"X6\")"
    ]
   },
   {
