--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -29,6 +29,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scope_mat = pd.read_csv('dataset/scope.csv')\n",
+    "scope_mat\n",
+    "\n",
+    "def factor_scope(Xi):\n",
+    "    # return the indexes with 1\n",
+    "    idx = np.where(scope_mat[Xi]==1)\n",
+    "    Xs = idx[0]+1\n",
+    "    return Xs\n",
+    "    \n",
+    "factor_scope(\"X6\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 125,
    "metadata": {},
    "outputs": [],
@@ -276,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
