--- a/august.ipynb
+++ b/august.ipynb
@@ -400,6 +400,35 @@
     "pred_log_reg_y_11 = log _reg_y_11.predict(x_test) \n",
     "print(\"Logistic Regression accuracy for X10: \", log_reg_y_11.score(x_test, y_11_test))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Unnamed: 0  X1  X2  X3  X4  X5  X6  X7  X8  X9  X10  X11\n",
+      "0          X1   1   0   0   0   0   0   0   0   0    0    0\n",
+      "1          X2   0   1   0   0   0   0   0   0   0    0    0\n",
+      "2          X3   0   0   1   0   0   0   0   0   0    0    0\n",
+      "3          X4   0   1   0   1   0   0   0   0   0    0    0\n",
+      "4          X5   0   0   0   0   1   0   0   0   0    0    0\n",
+      "5          X6   0   0   0   0   0   1   0   0   1    0    0\n",
+      "6          X7   1   0   0   0   0   1   1   0   0    1    0\n",
+      "7          X8   1   1   1   1   1   0   0   1   0    0    1\n",
+      "8          X9   0   0   1   1   1   0   0   0   1    0    1\n",
+      "9         X10   0   0   0   0   0   1   0   0   1    1    0\n",
+      "10        X11   0   0   0   1   0   0   0   1   0    0    1\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_adj = pd.read_csv('dataset/scope.csv')\n",
+    "print(df_adj)"
+   ]
   }
  ],
  "metadata": {
