--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Factors / CPD's"
+    "# Variable Elimination for the moralized graph\n",
+    "\n",
+    "Implement inference algorithms for computing the conditional distribution of $X_{10}$ and $X_{11}$ given the observed variables for any choice of parameters $\\psi^{(1)}, \\ldots, \\psi^{(11)}$."
    ]
   },
   {
@@ -29,9 +31,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6,  7, 10])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scope_mat = pd.read_csv('dataset/scope.csv')\n",
     "scope_mat\n",
@@ -294,7 +307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
