--- a/tove.ipynb
+++ b/tove.ipynb
@@ -1009,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 266,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,15 +1019,18 @@
     "    parents = list(cpd.columns[cpd.columns != child])\n",
     "    jdist = cpd_probs_from_data(cpd,data)\n",
     "    cpd['probs'] = jdist\n",
-    "    prob_ev = cpd['probs'].sum()\n",
-    "    cpd['cond_prob'] = cpd['probs']/prob_ev\n",
-    "    return cpd\n",
+    "    # restricting to evidence e = (child = 1)\n",
+    "    cpd_e = cpd[cpd[child] == 1].copy()\n",
+    "    prob_ev = cpd_e['probs'].sum()\n",
+    "    print(prob_ev)\n",
+    "    cpd_e['cond_prob'] = cpd_e['probs']/prob_ev\n",
+    "    return cpd_e\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1124,7 @@
        "7    1    1    1"
       ]
      },
-     "execution_count": 258,
+     "execution_count": 267,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1139,22 +1142,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.2309495896834701\n",
       "   Erk  Mek  Akt     probs  cond_prob\n",
-      "0    0    0    0  0.479484   0.479484\n",
-      "1    0    0    1  0.039859   0.039859\n",
-      "2    0    1    0  0.222743   0.222743\n",
-      "3    0    1    1  0.009379   0.009379\n",
-      "4    1    0    0  0.042204   0.042204\n",
-      "5    1    0    1  0.111372   0.111372\n",
-      "6    1    1    0  0.024619   0.024619\n",
-      "7    1    1    1  0.070340   0.070340\n"
+      "1    0    0    1  0.039859   0.172589\n",
+      "3    0    1    1  0.009379   0.040609\n",
+      "5    1    0    1  0.111372   0.482234\n",
+      "7    1    1    1  0.070340   0.304569\n"
      ]
     }
    ],
