--- a/tove.ipynb
+++ b/tove.ipynb
@@ -677,6 +677,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 269,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cpd_factor_large(cpd,alpha):\n",
+    "    variables = list(cpd.columns)\n",
+    "    n = len(variables)\n",
+    "    if n == 1:\n",
+    "        factor = alpha # more needed here - add to dataframe \n",
+    "        cpd_e = cpd.copy()\n",
+    "        cpd_e[\"Factor\"] = 1 - alpha\n",
+    "        return cpd_e\n",
+    "    else:\n",
+    "        child = variables[n-1]\n",
+    "        # restrict to X == 1\n",
+    "        cpd_e = cpd.copy()\n",
+    "        # generate factor \n",
+    "        parents = cpd_e.iloc[:,:-1].copy()\n",
+    "        parents[\"sum\"] = parents.sum(axis=1)\n",
+    "        cpd_e[\"Factor\"] = 1 - (alpha ** (1 + parents[\"sum\"]))\n",
+    "        return cpd_e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Erk  Mek  Akt  Factor\n",
+      "0    0    0    0   0.500\n",
+      "1    0    0    1   0.500\n",
+      "2    0    1    0   0.750\n",
+      "3    0    1    1   0.750\n",
+      "4    1    0    0   0.750\n",
+      "5    1    0    1   0.750\n",
+      "6    1    1    0   0.875\n",
+      "7    1    1    1   0.875\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cpd_factor_large(test1,0.5))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 142,
    "metadata": {},
    "outputs": [
