--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,9 +29,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "alpha = 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 6,  7, 10], dtype=int64)"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "scope_mat = pd.read_csv('dataset/scope.csv')\n",
     "scope_mat\n",
@@ -46,44 +66,86 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Elemination order"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
-    "alpha = 0.5\n",
-    "nodes = [7, 8, 1, 10, 6, 9, 3, 5, 11, 4, 2]\n",
-    "parents_top = [[], [], [7, 8], [7], [7,10], [10,6], [9,8], [9,8], [9,8], [11, 8, 9], [4, 8]]\n",
-    "\n",
-    "# Switch the from topological order to index order\n",
-    "def node_to_index(nodes, parents):\n",
-    "    reordered_parents = [-1] * (max(nodes) + 1)\n",
-    "    for node, parent in zip(nodes, parents):\n",
-    "        reordered_parents[node] = parent\n",
-    "    return reordered_parents[1:max(nodes)+1]\n",
-    "parents = node_to_index(nodes, parents_top)\n",
-    "parents.insert(0, -1)\n",
-    "\n",
-    "def synthetic_cpd(alpha, parent):\n",
-    "    # Create all possible combinations of parent values\n",
-    "    df = pd.DataFrame(list(product([0, 1], repeat=len(parent))), columns=parent)\n",
-    "    df['prob'] = 1 - alpha ** (1 + df.sum(axis=1)) # P(X=1|parents)\n",
+    "# The scope consist of the parents and the node itself\n",
+    "elimination_scope = [(\"X1\", ['X7', 'X8']),(\"X2\", ['X4', 'X8']),(\"X3\", ['X9', 'X8']),\n",
+    "                     (\"X5\", ['X9', 'X8']),(\"X4\", ['X11', 'X8', 'X9']),(\"X6\", ['X7', 'X10']),\n",
+    "                     (\"X7\", []),(\"X8\", []),(\"X9\", ['X10', 'X6']), (\"X10\", ['X7']),(\"X11\", ['X8', 'X9'])]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_factor(variable,parent_list):\n",
+    "    d = 1 + len(parent_list)\n",
+    "    m = 2 ** 2\n",
+    "    columns = parent_list + [variable]\n",
+    "    df = pd.DataFrame(product([0,1],repeat=d),columns=columns)\n",
     "    return df\n",
     "\n",
-    "df_x7 = synthetic_cpd(alpha, parents[7])\n",
-    "df_x8 = synthetic_cpd(alpha, parents[8])\n",
-    "df_x1 = synthetic_cpd(alpha, parents[1])\n",
-    "df_x10 = synthetic_cpd(alpha, parents[10])\n",
-    "df_x6 = synthetic_cpd(alpha, parents[6])\n",
-    "df_x9 = synthetic_cpd(alpha, parents[9])\n",
-    "df_x3 = synthetic_cpd(alpha, parents[3])\n",
-    "df_x5 = synthetic_cpd(alpha, parents[5])\n",
-    "df_x11 = synthetic_cpd(alpha, parents[11])\n",
-    "df_x4 = synthetic_cpd(alpha, parents[4])\n",
-    "df_x2 = synthetic_cpd(alpha, parents[2])\n",
+    "def cpd_factor(variable, parent_list, alpha):\n",
+    "    cpd = create_factor(variable, parent_list)\n",
+    "    variables = list(cpd.columns)\n",
+    "    n = len(variables)\n",
+    "    if n == 1:\n",
+    "        factor = alpha # more needed here - add to dataframe \n",
+    "        cpd_e = cpd[cpd[f\"{variables[n-1]}\"]==1].copy()\n",
+    "        cpd_e[\"prob\"] = 1 - alpha\n",
+    "        return cpd_e\n",
+    "    else:\n",
+    "        child = variables[n-1]\n",
+    "        # restrict to X == 1\n",
+    "        cpd_e = cpd[cpd[f\"{variables[n-1]}\"]==1].copy()\n",
+    "        # generate factor \n",
+    "        parents = cpd_e.iloc[:,:-1].copy()\n",
+    "        parents[\"sum\"] = parents.sum(axis=1)\n",
+    "        cpd_e[\"prob\"] = 1 - (alpha ** (1 + parents[\"sum\"]))\n",
+    "        return cpd_e\n",
+    "    \n",
+    "factor_test = cpd_factor(elimination_scope[2][0], elimination_scope[2][1], alpha)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(   X7  X8  X1   prob\n",
+      "1   0   0   1  0.500\n",
+      "3   0   1   1  0.750\n",
+      "5   1   0   1  0.750\n",
+      "7   1   1   1  0.875, 'phi_X1')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate factors for all nodes\n",
+    "# list form: [(factor, name), ... ]\n",
+    "factor_list = []\n",
+    "for elm in elimination_scope:\n",
+    "    name = 'phi_' + str(elm[0])\n",
+    "    cpd = cpd_factor(elm[0], elm[1], alpha)\n",
+    "    factor_list.append((cpd, name))\n",
     "\n",
-    "factor_list_top = [df_x7, df_x8, df_x1, df_x10, df_x6, df_x9, df_x3, df_x5, df_x11, df_x4, df_x2]\n",
-    "factor_list = node_to_index(nodes, factor_list_top)"
+    "print(factor_list[0])"
    ]
   },
   {
@@ -95,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -119,9 +181,11 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>7</th>\n",
-       "      <th>10</th>\n",
-       "      <th>6</th>\n",
+       "      <th>X7</th>\n",
+       "      <th>X8</th>\n",
+       "      <th>X1</th>\n",
+       "      <th>X4</th>\n",
+       "      <th>X2</th>\n",
        "      <th>prob</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -130,7 +194,9 @@
        "      <th>0</th>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.250000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -138,45 +204,59 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.375000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.375000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.562500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.562500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.562500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0.656250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.375000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.562500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0.656250</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
@@ -187,94 +267,97 @@
        "</div>"
       ],
       "text/plain": [
-       "   7  10  6      prob\n",
-       "0  0   0  0  0.250000\n",
-       "1  0   0  1  0.375000\n",
-       "2  1   0  0  0.375000\n",
-       "3  1   0  1  0.562500\n",
-       "4  0   1  0  0.562500\n",
-       "5  0   1  1  0.656250\n",
-       "6  1   1  0  0.656250\n",
-       "7  1   1  1  0.765625"
+       "   X7  X8  X1  X4  X2      prob\n",
+       "0   0   0   1   0   1  0.250000\n",
+       "1   0   0   1   1   1  0.375000\n",
+       "2   0   1   1   0   1  0.562500\n",
+       "3   0   1   1   1   1  0.656250\n",
+       "4   1   0   1   0   1  0.375000\n",
+       "5   1   0   1   1   1  0.562500\n",
+       "6   1   1   1   0   1  0.656250\n",
+       "7   1   1   1   1   1  0.765625"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Multiply factors togheter\n",
     "def factor_product(factor_1, factor_2):\n",
+    "    # List of all common nodes to join on\n",
     "    nodes_to_join = factor_1.columns.intersection(factor_2.columns)\n",
     "    nodes_to_join = nodes_to_join.drop(\"prob\")\n",
     "    nodes = list(nodes_to_join)\n",
     "\n",
+    "    #Inner join the factors by common nodes\n",
     "    new_factor = factor_1.merge(factor_2, how='inner', on=nodes)\n",
-    "    new_factor[\"prob\"] = new_factor[\"prob_x\"]*new_factor[\"prob_y\"]\n",
+    "    new_factor[\"prob\"] = new_factor[\"prob_x\"]*new_factor[\"prob_y\"] # Mulætiply the probabilities\n",
     "    new_factor = new_factor.drop(columns=[\"prob_x\",\"prob_y\"])\n",
     "    return new_factor\n",
     "\n",
-    "factor_product(factor_list_top[4], factor_list_top[5])"
+    "factor_product(factor_list[0][0], factor_list[1][0])"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_23428\\3474944801.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     32\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mlst_not_scope\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mtau\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msum_product_eliminate_var\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfactor_list\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_23428\\3474944801.py\u001b[0m in \u001b[0;36msum_product_eliminate_var\u001b[1;34m(factors, var, print_info)\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[1;31m# Multiply all factors in scope\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m     \u001b[0mfactor_\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlst_scope\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m     \u001b[1;31m# print(factor_)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlst_scope\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<zip object at 0x0000013A024F1240>\n"
      ]
     }
    ],
    "source": [
+    "# From algorithm 9.1 in the book (p. 298)\n",
     "def sum_product_eliminate_var(factors : list, var : int, print_info = False):\n",
+    "    factors_list = [i[0] for i in factors] # Factors\n",
+    "    names_list = [i[1] for i in factors] # Names of factors\n",
+    "\n",
     "    lst_scope = []   # Factors in scope\n",
     "    lst_scope_i = [] # Names of factors in scope   \n",
     "    lst_not_scope = [] # Factors not in scope\n",
     "    lst_not_scope_i = [] # Names of factors not in scope\n",
     "\n",
-    "    for i in range(1, len(factors)+1):\n",
-    "        if var in factors[i-1].columns:\n",
-    "            lst_scope.append(factors[i-1])\n",
-    "            lst_scope_i.append(i)\n",
+    "    # Split factors into scope and not scope\n",
+    "    for i in range(0, len(factors_list)):\n",
+    "        if var in factors_list[i].columns:\n",
+    "            lst_scope.append(factors_list[i])\n",
+    "            lst_scope_i.append(names_list[i])\n",
     "        else:\n",
-    "            lst_not_scope.append(factors[i-1])\n",
-    "            lst_not_scope_i.append(i)\n",
-    "\n",
+    "            lst_not_scope.append(factors_list[i])\n",
+    "            lst_not_scope_i.append(names_list[i])\n",
     "\n",
     "    # Multiply all factors in scope\n",
     "    factor_ = lst_scope[0]\n",
-    "    # print(factor_)\n",
     "    for i in range(1, len(lst_scope)):\n",
     "        factor_ = factor_product(factor_, lst_scope[i])\n",
     "\n",
+    "    # All variables that should not be marginalized\n",
+    "    col = list(factor_.columns[factor_.columns != var].drop(\"prob\")) \n",
+    "\n",
+    "    # Marginalize the variable\n",
+    "    tau = factor_.groupby(col, as_index = False)['prob'].sum()\n",
+    "    tau_name = 'tau_' + str(var) \n",
+    "\n",
+    "    # Add the new factor to the list of factors not in scope\n",
+    "    lst_not_scope = lst_not_scope + [tau]\n",
+    "    lst_not_scope_i = lst_not_scope_i + [tau_name]\n",
+    "    \n",
+    "    # Debuggering prints\n",
     "    if print_info:\n",
     "        for elm in lst_scope:\n",
     "            print(elm.columns)\n",
     "        print(lst_scope_i)\n",
     "\n",
-    "    # print('factor_', factor_, '\\n\\n')\n",
-    "    col = list(factor_.columns[factor_.columns != var].drop(\"prob\")) \n",
-    "    print('col', col)\n",
-    "    tau = factor_.groupby(col, as_index = False)['prob'].sum()\n",
+    "    return list(zip(lst_not_scope, lst_not_scope_i))\n",
     "\n",
-    "    return lst_not_scope + [tau]\n",
-    "\n",
-    "print(sum_product_eliminate_var(factor_list, 1, True))"
+    "print(sum_product_eliminate_var(factor_list, 'X1', False))"
    ]
   }
  ],
