--- a/part_ii.ipynb
+++ b/part_ii.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "array([ 6,  7, 10], dtype=int64)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,11 +74,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "# The scope consist of the parents and the node itself\n",
+    "variables_to_eliminate = ['X1', 'X2', 'X3', 'X4', 'X5', 'X6', 'X7', 'X8', 'X9']\n",
     "elimination_scope = [(\"X1\", ['X7', 'X8']),(\"X2\", ['X4', 'X8']),(\"X3\", ['X9', 'X8']),\n",
     "                     (\"X5\", ['X9', 'X8']),(\"X4\", ['X11', 'X8', 'X9']),(\"X6\", ['X7', 'X10']),\n",
     "                     (\"X7\", []),(\"X8\", []),(\"X9\", ['X10', 'X6']), (\"X10\", ['X7']),(\"X11\", ['X8', 'X9'])]\n"
@@ -86,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +279,7 @@
        "7   1   1   1   1   1  0.765625"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,14 +303,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<zip object at 0x0000013A024F1240>\n"
+      "[(   X4  X8  X2   prob\n",
+      "1   0   0   1  0.500\n",
+      "3   0   1   1  0.750\n",
+      "5   1   0   1  0.750\n",
+      "7   1   1   1  0.875, 'phi_X2'), (   X9  X8  X3   prob\n",
+      "1   0   0   1  0.500\n",
+      "3   0   1   1  0.750\n",
+      "5   1   0   1  0.750\n",
+      "7   1   1   1  0.875, 'phi_X3'), (   X9  X8  X5   prob\n",
+      "1   0   0   1  0.500\n",
+      "3   0   1   1  0.750\n",
+      "5   1   0   1  0.750\n",
+      "7   1   1   1  0.875, 'phi_X5'), (    X11  X8  X9  X4    prob\n",
+      "1     0   0   0   1  0.5000\n",
+      "3     0   0   1   1  0.7500\n",
+      "5     0   1   0   1  0.7500\n",
+      "7     0   1   1   1  0.8750\n",
+      "9     1   0   0   1  0.7500\n",
+      "11    1   0   1   1  0.8750\n",
+      "13    1   1   0   1  0.8750\n",
+      "15    1   1   1   1  0.9375, 'phi_X4'), (   X7  X10  X6   prob\n",
+      "1   0    0   1  0.500\n",
+      "3   0    1   1  0.750\n",
+      "5   1    0   1  0.750\n",
+      "7   1    1   1  0.875, 'phi_X6'), (   X7  prob\n",
+      "1   1   0.5, 'phi_X7'), (   X8  prob\n",
+      "1   1   0.5, 'phi_X8'), (   X10  X6  X9   prob\n",
+      "1    0   0   1  0.500\n",
+      "3    0   1   1  0.750\n",
+      "5    1   0   1  0.750\n",
+      "7    1   1   1  0.875, 'phi_X9'), (   X7  X10  prob\n",
+      "1   0    1  0.50\n",
+      "3   1    1  0.75, 'phi_X10'), (   X8  X9  X11   prob\n",
+      "1   0   0    1  0.500\n",
+      "3   0   1    1  0.750\n",
+      "5   1   0    1  0.750\n",
+      "7   1   1    1  0.875, 'phi_X11'), (   X7  X8   prob\n",
+      "0   0   0  0.500\n",
+      "1   0   1  0.750\n",
+      "2   1   0  0.750\n",
+      "3   1   1  0.875, 'tau_X1')]\n"
      ]
     }
    ],
@@ -358,6 +399,41 @@
     "    return list(zip(lst_not_scope, lst_not_scope_i))\n",
     "\n",
     "print(sum_product_eliminate_var(factor_list, 'X1', False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X1 ['phi_X2', 'phi_X3', 'phi_X5', 'phi_X4', 'phi_X6', 'phi_X7', 'phi_X8', 'phi_X9', 'phi_X10', 'phi_X11', 'tau_X1']\n",
+      "X2 ['phi_X3', 'phi_X5', 'phi_X4', 'phi_X6', 'phi_X7', 'phi_X8', 'phi_X9', 'phi_X10', 'phi_X11', 'tau_X1', 'tau_X2']\n",
+      "X3 ['phi_X5', 'phi_X4', 'phi_X6', 'phi_X7', 'phi_X8', 'phi_X9', 'phi_X10', 'phi_X11', 'tau_X1', 'tau_X2', 'tau_X3']\n",
+      "X4 ['phi_X5', 'phi_X6', 'phi_X7', 'phi_X8', 'phi_X9', 'phi_X10', 'phi_X11', 'tau_X1', 'tau_X3', 'tau_X4']\n",
+      "X5 ['phi_X6', 'phi_X7', 'phi_X8', 'phi_X9', 'phi_X10', 'phi_X11', 'tau_X1', 'tau_X3', 'tau_X4', 'tau_X5']\n",
+      "X6 ['phi_X7', 'phi_X8', 'phi_X10', 'phi_X11', 'tau_X1', 'tau_X3', 'tau_X4', 'tau_X5', 'tau_X6']\n",
+      "X7 ['phi_X8', 'phi_X11', 'tau_X3', 'tau_X4', 'tau_X5', 'tau_X7']\n",
+      "X8 ['tau_X8']\n",
+      "X9 ['tau_X9']\n",
+      "[(   X11  X10      prob\n",
+      "0    1    1  0.069029, 'tau_X9')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum_product_ve(factors, order):\n",
+    "\n",
+    "    # For each variable in the elimination order\n",
+    "    for var in order:\n",
+    "        factors = sum_product_eliminate_var(factors, var)\n",
+    "        print(var, [i[1] for i in factors])\n",
+    "    return factors\n",
+    "\n",
+    "print(sum_product_ve(factor_list, variables_to_eliminate))"
    ]
   }
  ],
